force-app/main/default/objects/FilingContact__c/FilingContact__c.object-meta.xml
<CustomObject>
    <description>PacPoint-IC101018 - Created for BREG phase 1</description>
    <label>Filing Contact</label>
    <nameField>
        <displayFormat>FC-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Filing Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>