force-app/main/default/objects/FilingContact__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <description>PacPoint-IC101118 - Created for BREG phase 1</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Filing Contacts</relationshipLabel>
    <relationshipName>FilingContacts</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>