force-app/main/default/objects/FilingContact__c/fields/Filings__c.field-meta.xml
<CustomField>
    <fullName>Filings__c</fullName>
    <description>PacPoint-IC101118 - Created for BREG phase 1</description>
    <label>Filing</label>
    <referenceTo>Filing__c</referenceTo>
    <relationshipLabel>Filing Contacts</relationshipLabel>
    <relationshipName>FilingContacts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>