force-app/main/default/objects/FilingContact__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <description>PacPoint-CL101018 - Created for BREG phase 1</description>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CEO</fullName>
            </value>
            <value>
                <fullName>Dealer-Individual</fullName>
            </value>
            <value>
                <fullName>Franchisee</fullName>
            </value>
            <value>
                <fullName>Lawyer</fullName>
            </value>
            <value>
                <fullName>Representative</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>